# dellAss

./: .gitignore  README.md  docker-compose.yml  run.sh
client/: AverageTask.h  Client.cpp  Dockerfile  Task.h  TaskManager.h  run.sh
client/src/: AMQConsumer.h  AccumelationTask.h  AverageTask.h  Client.cpp  Consumer.h  SimpleConsumer.h  Task.h  TaskManager.h
server/: AMQProducer.h  Dockerfile  Producer.h  Sensor.h  run.sh
server/src/: AMQProducer.cpp  AMQProducer.h  CMakeLists.txt  Producer.h  Sensor.cpp  Sensor.h  Server.cpp  SimpleProducer.h
